# OKVIS2-X

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  doxygen.config  package.xml
config/euroc/: okvis2.yaml  se2.yaml
config/gvins/: okvis2.yaml
config/hilti22/: okvis2-lidar.yaml  okvis2-postcalib.yaml  okvis2.yaml  se2-lidar.yaml  se2.yaml
config/rsD455/: okvis2.yaml  se2.yaml
config/rviz2/: rviz2_okvis2x_config.rviz
config/vbr/: okvis2-lidar-driving.yaml  okvis2-lidar-handheld.yaml  okvis2.yaml  se2-driving.yaml  se2-lidar-driving-ciamp0.yaml  se2-lidar-driving.yaml  se2-lidar-handheld-spagna.yaml  se2-lidar-handheld.yaml  se2.yaml
okvis_apps/src/: okvis2x_app_network_synchronous.cpp  okvis2x_app_synchronous.cpp  okvis_app_realsense.cpp  okvis_app_realsense_recorder.cpp  okvis_app_synchronous.cpp
okvis_ceres/: CMakeLists.txt
okvis_ceres/include/okvis/: Component.hpp  PseudoInverse.hpp  ViGraph.hpp  ViGraphEstimator.hpp  ViSlamBackend.hpp
okvis_ceres/include/okvis/ceres/: CeresIterationCallback.hpp  DepthError.hpp  ErrorInterface.hpp  GpsErrorAsynchronous.hpp  GpsErrorSynchronous.hpp  HomogeneousPointError.hpp  HomogeneousPointLocalParameterization.hpp  HomogeneousPointParameterBlock.hpp  ImuError.hpp  ParameterBlock.hpp  ParameterBlockSized.hpp  PoseError.hpp  PoseLocalParameterization.hpp  PoseParameterBlock.hpp  RelativePoseError.hpp  ReprojectionError.hpp  ReprojectionErrorBase.hpp  SpeedAndBiasError.hpp  SpeedAndBiasParameterBlock.hpp  SubmapIcpError.hpp  TwoPoseExtrinsicsGraphError.hpp  TwoPoseGraphError.hpp
okvis_ceres/src/: CeresIterationCallback.cpp  Component.cpp  ErrorInterface.cpp  GpsErrorAsynchronous.cpp  GpsErrorSynchronous.cpp  HomogeneousPointError.cpp  HomogeneousPointLocalParameterization.cpp  HomogeneousPointParameterBlock.cpp  ImuError.cpp  PoseError.cpp  PoseLocalParameterization.cpp  PoseParameterBlock.cpp  RelativePoseError.cpp  SpeedAndBiasError.cpp  SpeedAndBiasParameterBlock.cpp  SubmapIcpError.cpp  TwoPoseExtrinsicsGraphError.cpp  TwoPoseGraphError.cpp  ViGraph.cpp  ViGraphEstimator.cpp  ViSlamBackend.cpp
okvis_ceres/test/: TestEstimator.cpp  TestEstimatorGpsError.cpp  TestGpsError.cpp  TestGpsErrorSynchronous.cpp  TestHomogeneousPointError.cpp  TestImuError.cpp  TestMap.cpp  TestMarginalization.cpp  TestPoseError.cpp  TestPoseGraphError.cpp  TestPositionError.cpp  TestRelativeReprojectionError.cpp  TestReprojectionError.cpp  TestSubmapIcpError.cpp  TestViGraph2.cpp  test_main.cpp
okvis_common/: CMakeLists.txt
okvis_common/include/okvis/: FrameTypedefs.hpp  Measurements.hpp  Parameters.hpp  ViFrontendInterface.hpp  ViInterface.hpp  ViParametersReader.hpp
okvis_common/src/: ViInterface.cpp  ViParametersReader.cpp
okvis_cv/: CMakeLists.txt
okvis_cv/include/okvis/: Frame.hpp  MultiFrame.hpp
okvis_cv/include/okvis/cameras/: CameraBase.hpp  DistortionBase.hpp  EquidistantDistortion.hpp  EucmCamera.hpp  NCameraSystem.hpp  NoDistortion.hpp  PinholeCamera.hpp  RadialTangentialDistortion.hpp  RadialTangentialDistortion8.hpp
okvis_cv/include/okvis/implementation/: Frame.hpp  MultiFrame.hpp
okvis_cv/include/okvis/internal/: Network.hpp
okvis_cv/src/: CameraBase.cpp  Frame.cpp  NCameraSystem.cpp
okvis_cv/test/: TestEucmCamera.cpp  TestFrame.cpp  TestMultiFrame.cpp  TestNCameraSystem.cpp  TestPinholeCamera.cpp  runTests.cpp
okvis_deep_learning/: CMakeLists.txt
okvis_deep_learning/include/okvis/: DeepLearningProcessor.hpp  DepthFusionProcessor.hpp  Processor.hpp  Stereo2DepthProcessor.hpp  utils.hpp
okvis_deep_learning/src/: DepthFusionProcessor.cpp  Processor.cpp  Stereo2DepthProcessor.cpp
okvis_frontend/: CMakeLists.txt
okvis_frontend/include/okvis/: Frontend.hpp
okvis_frontend/include/okvis/triangulation/: stereo_triangulation.hpp
okvis_frontend/include/opengv/absolute_pose/: FrameNoncentralAbsoluteAdapter.hpp  LoopclosureNoncentralAbsoluteAdapter.hpp
okvis_frontend/include/opengv/relative_pose/: FrameRelativeAdapter.hpp
okvis_frontend/src/: FrameNoncentralAbsoluteAdapter.cpp  FrameRelativeAdapter.cpp  Frontend.cpp  LoopclosureNoncentralAbsoluteAdapter.cpp  stereo_triangulation.cpp
okvis_kinematics/include/okvis/kinematics/: Transformation.hpp  operators.hpp
okvis_kinematics/test/: TestTransformation.cpp
okvis_mapping/: CMakeLists.txt
okvis_mapping/include/okvis/: LidarMotionUndistortion.hpp  SubmappingUtils.hpp  VoxelGridFilter.hpp  config_mapping.hpp  mapTypedefs.hpp
okvis_mapping/include/okvis/impl/: config_mapping_impl.hpp
okvis_mapping/src/: LidarMotionUndistortion.cpp  SubmappingUtils.cpp  VoxelGridFilter.cpp
okvis_mapping/test/: runTests.cpp  voxelGridTests.cpp
okvis_multisensor_processing/: CMakeLists.txt
okvis_multisensor_processing/include/okvis/: DatasetReader.hpp  DatasetWriter.hpp  DepthUtils.hpp  LeicaDatasetReader.hpp  QueuedTrajectory.hpp  Realsense.hpp  RealsenseRgbd.hpp  RpgDatasetReader.hpp  SubmappingInterface.hpp  ThreadedSlam.hpp  TrajectoryOutput.hpp  ViSensorBase.hpp  ViVisualizer.hpp  XDatasetReader.hpp
okvis_multisensor_processing/src/: DatasetReader.cpp  DatasetWriter.cpp  LeicaDatasetReader.cpp  Realsense.cpp  RealsenseRgbd.cpp  RpgDatasetReader.cpp  SubmappingInterface.cpp  ThreadedSlam.cpp  TrajectoryOutput.cpp  ViVisualizer.cpp  XDatasetReader.cpp
okvis_multisensor_processing/test/: FrameSynchronizer_test.cpp  ImuFrameSynchronizer_test.cpp  MockVioBackendInterface.hpp  MockVioFrontendInterface.hpp  VioVisualizer_test.cpp  testDataFlow.cpp  testDataGenerators.hpp  testSynchronizer.cpp  testThreading.cpp  test_main.cpp
okvis_ros2/include/okvis/ros2/: PointCloudUtilities.hpp  (+5 more)
okvis_ros2/launch/: okvis2x_node_realsense.launch.xml  okvis2x_node_subscriber.launch.xml
okvis_ros2/src/: Publisher.cpp  RePublisher.cpp  RosbagReader.cpp  Subscriber.cpp  okvis2x_network_node.cpp  okvis2x_node.cpp  okvis_node_realsense_publisher.cpp  okvis_node_synchronous.cpp
okvis_util/include/okvis/: MstGraph.hpp  ThreadedPublisher.hpp  assert_macros.hpp  source_file_pos.hpp
tools/: convert_to_tum.py  hilti_bag2mrl.py  okvis_to_vtk.sh  vbr_bag2mrl.py
(+15 files in other folders)
